Version 2.02.52 -
=================================
  Fix vgcfgrestore error paths when locking fails (2.02.49).
  Added configure --enable-clogd to conditionally build the cluster log daemon.
  Make lvchange --refresh only take a read lock on volume group.
  Fix bug where non-blocking file locks could be granted in error.
  Make lvm2app pv_t, lv_t, vg_t handle definitions consistent with lvm_t.
  Fix vgextend error path - if ORPHAN lock fails, unlock / release vg (2.02.49).
  Fix compile warning in clvmd.
  Update lv{convert|create|extend|resize} man pages - clarify use of PE ranges.
  Remove useless _pv_write wrapper.
  Update test/api/test.c to call lvm_vg_create and lvm_vg_remove.

Version 2.02.51 - 6th August 2009
=================================
  Fix locking in clvmd (2.02.50).
  Add --noudevsync option for relevant LVM tools.
  Add activation/udev_sync to lvm.conf.
  Only change LV symlinks on ACTIVATE not PRELOAD.
  Make lvconvert honour log mirror options combined with downconversion.
  Allow LV suspend while --ignorelockingfailure is in force.
  Update synopsis in lvconvert manpage to mention --repair.
  Set cookies in activation code and wait for udev to complete processing.
  Added configure --enable-udev_rules --enable-udev_sync.
  Added configure --with-udev-prefix --with-udevdir.
  Added udev dir to hold udev rules.
  Add devices/data_alignment_detection to lvm.conf.
  Add devices/data_alignment_offset_detection to lvm.conf.
  Add --dataalignmentoffset to pvcreate to shift start of aligned data area.
  Fix _mda_setup() to not check first mda's size before pe_align rounding.
  Document -I option of clvmd in the man page.
  Fix configure script to handle multiple clvmd selections.
  Fix lvm2app.pc installation filename.
  Remove pv_t, vg_t & lv_t handles from lib.  Only liblvm uses them.
  Rename lvm.h to lvm2app.h for now.

Version 2.02.50 - 28th July 2009
================================